Bugfix/kitosudv 5634 broken links info icon too close (#372)
* fix padding

* change proxy back

* change css class name to better fit functionality

--- a/src/app/shared/components/external-page-link/external-page-link.component.scss
+++ b/src/app/shared/components/external-page-link/external-page-link.component.scss
@@ -11,3 +11,7 @@
     font-size: $link-font-size-x-small;
   }
 }
+
+.text-padding {
+  padding-right: $padding-small;
+}
