--- a/src/app/shared/components/role-table/role-row/role-row.component.scss
+++ b/src/app/shared/components/role-table/role-row/role-row.component.scss
@@ -1,5 +1,5 @@
 @import 'theme';
 
-.align-icon-right {
+.text-padding {
   padding-right: $padding-small;
 }
